# yolo_sgg

./: .gitignore  ARCHITECTURE_PROPOSAL.md  METRICS_README.md  README.md  SETUP.md  VGGT_INTEGRATION_README.md  bench.py  benchmark.py  benchmark_thud.py  benchmark_tracking.py  dav3_model.py  debug_gt.py  evaluate_tracking.py  gt_vis.py  isaac_sim_data_collection.py  isaac_sim_loader.py  isaac_sim_loader_v2.py  isaac_sim_loaderv3.py  kg_nav_run.py  make_video.py  metrics_3d.py  metrics_utils.py  new_run.py  pi3_model.py  plot_thud_real.py  real_scene_loader.py  requirements.txt  rerun.md  rerun_utils.py  run.md  run.py  test-yolo-sgg-v12-1.ipynb  test_coda.ipynb  test_gx.py  test_opem3d.py  thud_bench.sh  thud_loader.py  utils.py  vis_isaac_sim.py  visualize_gt.py  (+9 more)
Pi3/: README.md  run.py  utils.py
Pi3_for_yolo_sgg/: align_pi3_gt.py  example.py  example_vo.py  pyproject.toml  run.md  run.py  run_stream.py  utils.py  visualize_gt_vs_pi3x.py
Pi3_for_yolo_sgg/examples/room/: condition.npz
Pi3_for_yolo_sgg/pi3/pipe/: pi3x_vo.py  pi3x_vo_stream.py
Pi3_for_yolo_sgg/pi3/utils/: basic.py
UR5-Peg-In-Hole_02_complex/: traj.txt
UR5-Peg-In-Hole_02_complex_big/: traj.txt
UR5-Peg-In-Hole_02_straight/: traj.txt
UR5-Peg-In-Hole_03/: traj.txt
YOLOE/: utils.py
assets/: BENCHMARK_ARCHITECTURE.md
benchmark/: benchmark.py  benchmark_tracking.py  benchmark_tracking_isaac.py  benchmark_tracking_thud.py  reame.md  visualization.py
configs/: any_scene.yaml  core_tracking.yaml  default_run.yaml  isaacsim.yaml  scanetpp.yaml  thud_real.yaml  thud_synthetic.yaml
v2/: types.py  (+7 more)
(+164 files in other folders)
