[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi3"
version = "0.1"
description = "pi3"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "safetensors",
]

# Setuptools configuration
[tool.setuptools]
# Disable automatic package discovery to avoid conflicts
packages = ["pi3"]

# Include package data
[tool.setuptools.package-data]
"pi3" = ["**/*"]
